--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,7 +2,7 @@ SetEnvIf Request_URI "/$" home_uri
 
 AuthName "Log in met u DGV inlog gegevens"
 AuthType Basic
-AuthUserFile C:\xampp\htdocs\laravel\dgv-test\htpasswords\.htpasswd
+AuthUserFile C:\xampp2\htdocs\DGV\htpasswords\.htpasswd
 Require valid-user
 
 Deny from all
